<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="8dp"
    tools:context=".fragments.UploadCardFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RegisterFragment">

            <LinearLayout
                android:id="@+id/signup_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:id="@+id/selectedCardImage"
                    android:background="@drawable/no_image"
                    android:layout_marginBottom="@dimen/margin_15dp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/card_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/card_ctegory_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_ctegory_id"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/card_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_price"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>
            <Button
                android:text="@string/addCard"
                android:textAllCaps="false"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:layout_below="@id/signup_layout"
                android:id="@+id/btnAddCard"
                android:textStyle="bold"
                android:background="@drawable/button_ui_background"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="45dp" />

        </RelativeLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>